# argon2-gpu

./: .gitignore  CMakeLists.txt  Dockerfile  build-in-docker.sh
docker-build/: argon2-gpu-bench  argon2-gpu-test  libargon2.so.1
lib/argon2-cuda/: processingunit.cpp
trash/: Dockerfile.cuda-build  Dockerfile.cuda-clean  Dockerfile.cuda-only  Dockerfile.simple-cuda  Dockerfile.webdollar-build  build-cuda-clean.sh  build-cuda-docker.sh  build-cuda-with-gpu.sh  build-simple.sh  build-webdollar-docker.sh
